# arqanmode

./: pyproject.toml  setup.py
arqanmode/: __init__.py  framework.py
arqanmode/api/: status.py
arqanmode/domain/: __init__.py  model.py  requirements.py  scheme.py  task.py  transformers.py
arqanmode/kafka/: __init__.py  consumer.py  generic_consumer.py
arqanmode/models/: __init__.py  validate.py
arqanmode/pdf/: __init__.py  reader.py  requirements.txt
arqanmode/pdf/tests/: conftest.py  test_reader.py
arqanmode/storage/: __init__.py  interface.py  redis.py  storage.py
